fix: table overflow css

--- a/src/components/assetTable/AssetTable.scss
+++ b/src/components/assetTable/AssetTable.scss
@@ -6,8 +6,7 @@
   width: 100%;
   border-radius: 8px;
   padding: 0 20px;
-  height: 60vh;
-  overflow-y: scroll;
+
   &__header {
     display: flex;
     justify-content: space-between;
@@ -41,6 +40,8 @@
   }
   &__assets {
     width: 100%;
+    height: 45vh;
+    overflow-y: scroll;
     &__loading {
       height: 50vh;
       @extend .flexCenter;
